# lh-metrics-analysis

./: .Rbuildignore  .codecov.yml  .eslintrc.cjs  .gitignore  DESCRIPTION  README.md  package.json  tsconfig.eslint.json  tsconfig.json
.github/actions/service-account-key/: README.md  action.yml  package.json  setup-service-account.js
.github/workflows/: continuous-integration.yml
R/: plot-dependent-shift-bin.R  plot-difference-deciles-bin.R  rogme-diff-deciles-pbci-bin.R  rogme-shift-function-bin.R  utils.R
c++/: CMakeLists.txt  README.md  hd-weight-generator.cpp  ibeta-derivative-check.cpp
js/: concurrent-mapper.js  csv-parser.js  file-hash.js  module-utils.js
js/big-query/: bq-utils.js  extract-from-ha-tables.js  fetch-from-extracted-tables.js  fetch-interactive.js  ha-tables-data.js  lhr-tables-data.js  query-extracted-tables.js  upload-lhrs.js
js/big-query/auth/: credentials.js
js/estimators/: harrell-davis-estimator-weights.js  harrell-davis-lookup-table.js  quantiles-pbci.js  running-variance.js  shift-function.js
js/recipes/: upload-lhrs.js
js/reports/: metric-comparisons.js  tables-summary.js
js/types/: externs.d.ts  util-types.d.ts
js/types/es-main/: es-main.d.ts
js/types/xorshift/: xorshift.d.ts
reports/manual/2020-10-http-archive-throttling-vs-cli/: report.md
reports/monthly/: readme.md
test/test-utils/: floating-point-checks.js  generate-test-ha-tables.js
tests/fixtures/: paired-fcp-data.csv
tests/js/: csv-parser-test.js  file-hash-test.js
tests/test-utils/: floating-point-checks.js  generate-test-ha-tables.js
(+22 files in other folders)
